--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.71.2",
+    "@google/generative-ai": "^0.24.1",
     "@signpdf/placeholder-pdf-lib": "^3.2.6",
     "@signpdf/signer-p12": "^3.2.4",
     "@signpdf/signpdf": "^3.2.5",
@@ -33,19 +35,21 @@
     "convertapi": "^1.15.0",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^8.1.0",
-    "i18next": "^23.7.16",
+    "i18next": "^23.16.8",
+    "i18next-browser-languagedetector": "^8.2.0",
     "langchain": "^0.1.7",
     "mammoth": "^1.11.0",
     "muhammara": "^6.0.0",
     "node-forge": "^1.3.3",
+    "openai": "^6.15.0",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.0.379",
     "pdfkit": "^0.17.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^14.0.0",
+    "react-i18next": "^14.1.3",
     "sharp": "^0.33.2",
-    "tesseract.js": "^5.0.4",
+    "tesseract.js": "^5.1.1",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
