--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "axios": "^1.6.5",
     "coherentpdf": "^2.5.5",
     "convertapi": "^1.15.0",
+    "electron-log": "^5.4.3",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^8.1.0",
+    "electron-updater": "^6.6.2",
     "i18next": "^23.16.8",
     "i18next-browser-languagedetector": "^8.2.0",
     "langchain": "^0.1.7",
