--- a/package.json
+++ b/package.json
@@ -55,12 +55,15 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
     "@types/pdfkit": "^0.17.4",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@vitejs/plugin-react": "^4.3.3",
+    "@vitest/coverage-v8": "^4.0.16",
     "@vitest/ui": "^1.2.1",
     "autoprefixer": "^10.4.17",
     "blob-stream": "^0.1.3",
@@ -73,12 +76,13 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jsdom": "^27.4.0",
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.6.3",
     "vite": "^5.4.11",
-    "vitest": "^1.2.1",
+    "vitest": "^1.6.1",
     "wait-on": "^7.2.0"
   },
   "build": {
