Fix: Correct icon paths in electron-builder for GitHub Actions
- Change win.icon from assets/icon.ico to build/icon.ico
- Change fileAssociations icon from assets to build folder
- Fixes icon not appearing in GitHub Action builds
- Local builds already worked, this fixes CI/CD builds

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -38,14 +38,14 @@ win:
     - target: portable
       arch:
         - x64
-  icon: assets/icon.ico
+  icon: build/icon.ico
   artifactName: "PDF-Kit-${version}-Setup-${arch}.${ext}"
   # File associations for Windows
   fileAssociations:
     - ext: pdf
       name: PDF Document
       description: Portable Document Format
-      icon: assets/pdf-icon.ico
+      icon: build/pdf-icon.ico
 
 nsis:
   oneClick: false
